Added Baseline + Rouge Score + New Method

--- a/w266_project_workspace.ipynb
+++ b/w266_project_workspace.ipynb
@@ -2761,7 +2761,7 @@
         "id": "0R1lQKrdLDsb"
       },
       "source": [
-        "We get a Rouge score of 0.06/1. This isn't great . **Next, we attemp to summarize a document by simply using the first 3 sentences.**"
+        "We get a Rouge score of 0.065/1. This isn't great . **Next, we attemp to summarize a document by simply using the first 3 sentences.**"
       ]
     },
     {
@@ -2783,15 +2783,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tbCobKZSM-y_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tbCobKZSM-y_",
+        "outputId": "4e77c4dd-5b74-465a-cdd6-5690b475a40c"
       },
       "source": [
         "hypotheses_first_3 = list(results['first_3'])\n",
         "scores = rouge.evaluate(hypotheses_first_3, references)\n",
         "print(scores)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'rouge-1': {'r': 0.06155785438684868, 'p': 0.0007677222660188229, 'f': 0.001516531029447086}, 'rouge-2': {'r': 0.0, 'p': 0.0, 'f': 0.0}, 'rouge-4': {'r': 0.0, 'p': 0.0, 'f': 0.0}, 'rouge-l': {'r': 0.06155785438684868, 'p': 0.0007677222660188229, 'f': 0.001516531029447086}, 'rouge-w-1.2': {'r': 0.09425793349131079, 'p': 0.0012270672139771499, 'f': 0.00242259661706262}, 'rouge-s4': {'r': 0.0, 'p': 0.0, 'f': 0.0}, 'rouge-su4': {'r': 0.0, 'p': 0.0, 'f': 0.0}}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2799,13 +2811,57 @@
         "id": "ddIH5mtSOP6k"
       },
       "source": [
-        "Using this method, we get a Rouge score of ... . "
+        "Using this method, we get a Rouge score of 0.062/1 . It turns out that using the first 3 sentences instead of the initial Bert summarizer does not change our accuracy by much."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "w5rhblLhM-1i"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "teH-dJCOQAwl"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BjzTJ3BTQAz7"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G3r726-RQA2r"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pN2sAAHnQA4e"
       },
       "source": [
         ""
